docs: update Swagger documentation with comprehensive API description and fix tech stack versions
- Add detailed API documentation describing Board-Hole as sample code repository
- Document architecture patterns, domain separation, and key features
- Add profile-specific feature descriptions (dev/prod/smtp profiles)
- Fix MySQL version from 8.0 to 9.4 (matching docker-compose.yml)
- Fix Redis version from 7.0 to 8.0 (matching docker-compose.yml)

Additional code quality improvements:
- Add @NonNull annotations for better null safety
- Improve class visibility (package-private where appropriate)
- Remove unused methods and message properties
- Enhance error handling with null-safe property access
- Update imports from jspecify to spring-lang annotations

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>